--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 14px;
 }
 
 body {
@@ -87,7 +89,7 @@ header input:hover {
 
 .content {
   width: 1200px;
-  background-color: #ccc;
+  background-color: #eee;
   position: relative;
   float: left;
   display: -webkit-box;
@@ -139,8 +141,6 @@ header input:hover {
   transition-property: box-shadow, -webkit-box-shadow;
   -webkit-transition-duration: 600ms;
           transition-duration: 600ms;
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
 }
 
 .content aside nav a:hover {
@@ -172,7 +172,9 @@ header input:hover {
 }
 
 .content section .hotel {
-  height: 250px;
+  height: 268.66667px;
+  -webkit-box-shadow: 0px 20px 40px 0px #ddd;
+          box-shadow: 0px 20px 40px 0px #ddd;
 }
 
 .content section .hotel img {
@@ -183,73 +185,133 @@ header input:hover {
 
 .content section .hotel .hotelName {
   background-color: #fff;
-  height: 45px;
-  width: 914px;
+  height: 50px;
+  width: 984px;
   float: left;
+  color: #999;
 }
 
-.content section .hotel .hotelName p {
+.content section .hotel .hotelName td {
+  padding: 0 20px;
+}
+
+.content section .hotel .hotelName td h2 {
+  font-size: 28px;
+}
+
+.content section .hotel .hotelName td p {
   text-align: right;
+  color: red;
+  text-decoration: underline;
 }
 
-.content section .hotel .rate {
-  height: 45px;
+.content section .hotel .hotelName .rate {
   width: 70px;
-  float: left;
-  background-color: violet;
+  padding: 0;
+  background-image: -webkit-gradient(linear, left top, right top, from(darkviolet), to(#530077));
+  background-image: linear-gradient(to right, darkviolet, #530077);
   text-align: center;
+  color: #fff;
+}
+
+.content section .hotel .hotelName .rate p {
+  text-align: center;
+  color: #fff;
 }
 
 .content section .descrip {
   width: 536px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 40px;
   background-color: #fff;
+  padding: 30px;
+  -webkit-box-shadow: 0px 0px 10px 0px #999;
+          box-shadow: 0px 0px 10px 0px #999;
+}
+
+.content section .descrip p {
+  margin: 20px;
+}
+
+.content section .descrip table:first-of-type {
+  margin: 30px;
+}
+
+.content section .descrip table:first-of-type tr td {
+  padding: 3px;
 }
 
 .content section .descrip .end {
-  width: 500px;
+  width: 536px;
+  margin: 50px 0;
+}
+
+.content section .descrip .end td {
   position: relative;
 }
 
-.content section .descrip .end img {
+.content section .descrip .end td img {
   height: 40px;
   width: 40px;
   position: absolute;
   border-radius: 50%;
   border: 5px white solid;
-  right: 50px;
+  bottom: -10px;
 }
 
-.content section .descrip .end img:nth-child(4) {
-  right: 10px;
-}
-
-.content section .descrip .end img:nth-child(3) {
+.content section .descrip .end td img:nth-child(4) {
   right: 30px;
 }
 
-.content section .descrip .end img:nth-child(2) {
+.content section .descrip .end td img:nth-child(3) {
   right: 50px;
 }
 
-.content section .descrip .end img:nth-child(1) {
+.content section .descrip .end td img:nth-child(2) {
   right: 70px;
+}
+
+.content section .descrip .end td img:nth-child(1) {
+  right: 90px;
 }
 
 .content section .comment {
   float: inherit;
   margin: 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
 }
 
-.content section .comment .com1, .content section .comment .com2 {
+.content section .comment .com {
   height: 250px;
   width: 196px;
+  -webkit-box-shadow: 0px 0px 10px 0px #999;
+          box-shadow: 0px 0px 10px 0px #999;
   background-color: #fff;
+  padding: 30px;
   margin-bottom: 50px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: left;
   position: relative;
 }
 
-.content section .comment .com1 img, .content section .comment .com2 img {
+.content section .comment .com blockquote {
+  quotes: "\201C" "\201C" "\201C" "\201C";
+}
+
+.content section .comment .com blockquote::before {
+  position: absolute;
+  content: open-quote;
+  font-size: 5em;
+  left: 0;
+  top: 0;
+  opacity: 0.2;
+}
+
+.content section .comment .com img {
   height: 40px;
   width: 40px;
   border-radius: 50%;
@@ -258,25 +320,34 @@ header input:hover {
   position: absolute;
 }
 
-.content section .comment .com1 p, .content section .comment .com2 p {
+.content section .comment .com p {
   bottom: 30px;
-  left: 70px;
+  left: 60px;
   position: absolute;
 }
 
-.content section .comment .com1 h2, .content section .comment .com2 h2 {
+.content section .comment .com h2 {
   position: absolute;
   display: block;
-  right: 0;
-  bottom: 40px;
+  right: 5px;
+  bottom: 30px;
 }
 
 .content section .comment a {
-  text-align: center;
   color: red;
 }
 
+.content section .comment a:hover {
+  color: #ff6f6f;
+}
+
 .content section .booking {
+  width: 984px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   text-align: center;
   float: left;
 }
@@ -285,7 +356,8 @@ header input:hover {
   height: 50px;
   width: 100px;
   color: wheat;
-  background-color: darkviolet;
+  background-image: -webkit-gradient(linear, left top, right top, from(darkviolet), to(#530077));
+  background-image: linear-gradient(to right, darkviolet, #530077);
   -webkit-box-shadow: inset 0 0 0 #FF037D;
           box-shadow: inset 0 0 0 #FF037D;
   border-radius: 50px;
@@ -299,12 +371,155 @@ header input:hover {
   transition-property: box-shadow, -webkit-box-shadow;
   -webkit-transition-duration: 600ms;
           transition-duration: 600ms;
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
 }
 
 .content section .booking button:hover {
   -webkit-box-shadow: inset 4px 0px 50px 2px #FF037D;
           box-shadow: inset 4px 0px 50px 2px #FF037D;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+  header {
+    height: 90px;
+    width: 500px;
+  }
+  header input {
+    margin: 0 0px;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+  .content {
+    width: 500px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .content aside {
+    height: 80px;
+    width: 500px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .content aside p {
+    display: none;
+  }
+  .content aside nav {
+    height: 80px;
+    width: 500px;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .content aside nav a {
+    height: 80px;
+    width: 125px;
+    -webkit-box-shadow: inset 0 0 0 darkviolet;
+            box-shadow: inset 0 0 0 darkviolet;
+    -webkit-transition-property: -webkit-box-shadow;
+    transition-property: -webkit-box-shadow;
+    transition-property: box-shadow;
+    transition-property: box-shadow, -webkit-box-shadow;
+    -webkit-transition-duration: 600ms;
+            transition-duration: 600ms;
+  }
+  .content aside nav a:hover {
+    -webkit-box-shadow: inset 0 216px 0 0 darkviolet;
+            box-shadow: inset 0 216px 0 0 darkviolet;
+  }
+  .content section {
+    width: 500px;
+  }
+  .content section .hotel {
+    height: 161.11111px;
+  }
+  .content section .hotel img {
+    height: 111.11111px;
+    width: 166.66667px;
+  }
+  .content section .hotel .hotelName {
+    height: 45px;
+    width: 500px;
+  }
+  .content section .hotel .rate {
+    height: 45px;
+    width: 70px;
+  }
+  .content section .descrip {
+    width: 420px;
+  }
+  .content section .descrip .end {
+    width: 420px;
+    font-size: 12px;
+  }
+  .content section .descrip .end img {
+    height: 10px;
+    width: 10px;
+  }
+  .content section .comment .com {
+    height: 170px;
+    width: 420px;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+  header {
+    height: 70px;
+    width: 984px;
+  }
+  .content {
+    width: 984px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .content aside {
+    height: 80px;
+    width: 984px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .content aside p {
+    display: none;
+  }
+  .content aside nav {
+    height: 80px;
+    width: 984px;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .content aside nav a {
+    height: 80px;
+    width: 246px;
+    -webkit-box-shadow: inset 0 0 0 darkviolet;
+            box-shadow: inset 0 0 0 darkviolet;
+    -webkit-transition-property: -webkit-box-shadow;
+    transition-property: -webkit-box-shadow;
+    transition-property: box-shadow;
+    transition-property: box-shadow, -webkit-box-shadow;
+    -webkit-transition-duration: 600ms;
+            transition-duration: 600ms;
+  }
+  .content aside nav a:hover {
+    -webkit-box-shadow: inset 0 216px 0 0 darkviolet;
+            box-shadow: inset 0 216px 0 0 darkviolet;
+  }
 }
 /*# sourceMappingURL=style.css.map */
