--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,5 +3,5 @@ $aside_width: 216px;
 $cont_width: $win_width - $aside_width;
 $image_in_cont_width: $cont_width/3;
 $booking_width: 100px;
-$hotel_hight: $image_in_cont_width/1.5+50;
+$hotel_hight: auto;
 $descrip_width: 536px;
