--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,11 +16,13 @@ body{
 
 .cointeiner{
     max-width: $win_width;
+    width: 100vw;
     margin: auto;
 }
 
 header{
-    @include Size($win_width, 70px);
+    @include Size(100vw, 70px);
+    max-width: $win_width;
     border-bottom: 2px #ccc solid;
     background-color: #fff;
     box-sizing: border-box;
@@ -50,8 +52,8 @@ header{
         margin-right: 20px;
     }
     input{
-        margin: 0 150px;
-        flex-grow: 3;
+        margin: 0 100px;
+        flex-grow: 2;
         border-radius: 40px;
         border: 1px solid #999;
         background-color: #eee;
@@ -65,7 +67,8 @@ header{
 }
 
 .content{
-    @include Size($win_width);
+    @include Size(100vw);
+    max-width: $win_width;
     background-color: #eee;
     position: relative;
     float: left;
@@ -73,14 +76,16 @@ header{
     flex-direction: row;
     flex-wrap: wrap;
     aside{
-        @include Size($aside_width,1200px);
+        @include Size(100vw,1150px);
+        max-width: $aside_width;
         background-color: #333;
         position: relative;
         display: flex;
         flex-direction: column;
         nav{
             a{
-                @include Size($aside_width, 80px);
+                @include Size(100vw, 80px);
+                max-width: $aside_width;
                 display: flex;
                 align-items: center;
                 color: wheat;
@@ -107,19 +112,25 @@ header{
         }
     }
     section{
-        @include Size($cont_width);
+        @include Size(calc(100% - 216px));
+        max-width: $cont_width;        
         display: flex;
         flex-flow: row wrap;
+        background-color: #eee;
         .hotel{
-            @include Size("nothing", $hotel_hight);
+            @include Size(100%, 150px);
             box-shadow: 0px 20px 40px 0px #ddd;
+            background-color: #eee;
             img{
-                @include Size($image_in_cont_width,$image_in_cont_width/1.5);
+                $image_in_cont_width: calc(100%/3);
+                @include Size(100%,auto);
+                max-width: $image_in_cont_width;
                 float: left;
             }
             .hotelName{
                 background-color: #fff;
-                @include Size($cont_width,50px);
+                @include Size(100%,50px);
+                max-width: $cont_width;   
                 float: left;
                 color: #999;
                 td{
@@ -142,12 +153,14 @@ header{
                     p{
                         text-align: center;
                         color: #fff;
+                        text-decoration: none;
                     }
                 }
             }
         }
         .descrip{
-            @include Size($descrip_width);
+            @include Size(50%);
+            max-width: $descrip_width;
             box-sizing: border-box;
             margin: 40px;
             background-color: #fff;
@@ -164,29 +177,34 @@ header{
                     }
                 }
             }
-            .end{
-                @include Size($descrip_width);
+            p{
+                @include Size(100%);
+                max-width: $descrip_width;
                 margin: 50px 0;
-                td{
-                    position: relative;
-                    img{
-                        @include Size(40px, 40px);
-                        position: absolute;
-                        border-radius: 50%;
-                        border: 5px white solid;
-                        bottom: -10px;
-                        &:nth-child(4){
-                            right: 30px;
-                        }
-                        &:nth-child(3){
-                            right: 50px;
-                        }
-                        &:nth-child(2){
-                            right: 70px;
-                        }
-                        &:nth-child(1){
-                            right: 90px;
-                        }
+                &.lucy{
+                    margin-bottom: 0;
+                }
+            }
+            div{
+                @include Size(140px,40px);
+                position: relative;
+                float: right;
+                img{
+                    @include Size(40px, 40px);
+                    position: absolute;
+                    border-radius: 50%;
+                    border: 5px white solid;
+                    &:first-of-type{
+                        right: 60px;
+                    }
+                    &:nth-of-type(2){
+                        right: 40px;
+                    }
+                    &:nth-of-type(3){
+                        right: 20px;
+                    }
+                    &:nth-of-type(4){
+                        right: 0px;
                     }
                 }
             }
@@ -197,7 +215,8 @@ header{
             box-sizing: border-box;
             text-align: center;
             .com{
-                @include Size(196px, 250px);
+                @include Size(100%, 250px);
+                max-width: 196px;
                 box-shadow: 0px 0px 10px 0px #999;
                 background-color: #fff;
                 padding: 30px;
@@ -231,8 +250,10 @@ header{
                 h2{
                     position: absolute;
                     display: block;
+                    font-size: 27px;
                     right: 5px;
                     bottom: 30px;
+                    color: #FF037D;
                 }
             }
             a{
@@ -243,11 +264,15 @@ header{
             }
         }
         .booking{
-            @include Size($cont_width);
+            @include Size(100vw);
+            max-width: $cont_width;
             justify-content: center;
-            align-self: flex-end;
             text-align: center;
             float: left;
+            h3{
+                font-size: 20px;
+                color: #999;
+            }
             button{
                 @include Size(100px, 50px);
                 color: wheat;
@@ -274,7 +299,8 @@ header{
     $hotel_hight: $image_in_cont_width/1.5+50;
     $descrip_width: $cont_width - 80px;
     header{
-        @include Size($cont_width, 90px);
+        @include Size(100vh,90px);
+        max-width: $cont_width;
         input{
             margin: 0 0px;
             align-self: flex-end;
@@ -283,8 +309,10 @@ header{
     .content{
         @include Size($cont_width);
         flex-direction: column;
+        word-wrap: break-word;
         aside{
-            @include Size($cont_width,80px);
+            @include Size(100vh,80px);
+            max-width: $cont_width;
             flex-direction: row;
             p{
                 display: none;
@@ -323,15 +351,18 @@ header{
                 @include Size($descrip_width);
                 .end{
                     @include Size($descrip_width);
-                    font-size: 12px;
                     img{
                         @include Size(10px,10px);
+                    }
+                    td{
+                        font-size: 12px;
                     }
                 }
             }
             .comment{
                 .com{
-                    @include Size($cont_width - 80px, 170px);
+                    @include Size(calc(100% - 80px), 170px);
+                    max-width: $cont_width;
                 }
             }
         }
@@ -340,30 +371,69 @@ header{
 
 @include mediaTablet{
     header{
-        @include Size($cont_width, 70px);
+        @include Size(100vw,70px);
+        max-width: $cont_width;
     }
     .content{
-        @include Size($cont_width);
+        @include Size(100vw);
+        max-width: $cont_width;
         flex-direction: column;
         aside{
-            @include Size($cont_width,80px);
+            @include Size(100vw,80px);
+            max-width: $cont_width;
             flex-direction: row;
             p{
                 display: none;
             }
             nav{
-                @include Size($cont_width,80px);
+                @include Size(100vw,80px);
+                max-width: $cont_width;
                 align-content: flex-start;
                 display: flex;
                 justify-content: center;
                 a{
-                    @include Size($cont_width/4, 80px);
+                    @include Size(100vw,80px);
+                    max-width: $cont_width/4;
                     box-shadow: inset 0 0 0 darkviolet;
                     transition-property: box-shadow;
                     transition-duration: 600ms;
                     &:hover{
                         box-shadow: inset 0 $aside_width 0 0 darkviolet;
                     }
+                }
+            }
+        }
+        section{
+            @include Size(100vw);
+            max-width: $cont_width;
+            .hotel{
+                @include Size(100vw,250px);
+                max-width: $cont_width; 
+                img{
+                    $image_in_cont_width: calc(100%/3);
+                    @include Size(100%,auto);
+                    max-width: $image_in_cont_width;
+                }
+            }
+            .descrip{
+                @include Size(50vw);
+                max-width: $descrip_width;
+                min-width: 350px;
+                table{
+                    @include Size(30vw);
+                    max-width: $descrip_width;
+                }
+                .end{
+                    @include Size(30vw);
+                    max-width: $descrip_width;
+                }
+            }
+            .comment{
+                @include Size(40vw);
+                max-width: 196px;
+                .com{
+                    @include Size(40vw);
+                    max-width: 196px;
                 }
             }
         }
