--- a/css/style.css
+++ b/css/style.css
@@ -406,19 +406,43 @@ header input:hover {
   cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 710px) {
   header {
     height: 90px;
-    width: 100vh;
-    max-width: 500px;
+    width: 100vw;
+    max-width: 100vw;
+  }
+  header img {
+    margin: 0;
+  }
+  header img.logo {
+    margin: 4px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  header img.chat {
+    margin: 8px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  header img.user {
+    margin: 4px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  header p {
+    display: none;
   }
   header input {
     margin: 0 0px;
     -ms-flex-item-align: end;
         align-self: flex-end;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
   .content {
-    width: 500px;
+    width: 100vw;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -427,8 +451,8 @@ header input:hover {
   }
   .content aside {
     height: 80px;
-    width: 100vh;
-    max-width: 500px;
+    width: 100vw;
+    max-width: 100vw;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -439,7 +463,7 @@ header input:hover {
   }
   .content aside nav {
     height: 80px;
-    width: 500px;
+    width: 100vw;
     -ms-flex-line-pack: start;
         align-content: flex-start;
     display: -webkit-box;
@@ -451,7 +475,7 @@ header input:hover {
   }
   .content aside nav a {
     height: 80px;
-    width: 125px;
+    width: 25vw;
     -webkit-box-shadow: inset 0 0 0 darkviolet;
             box-shadow: inset 0 0 0 darkviolet;
     -webkit-transition-property: -webkit-box-shadow;
@@ -466,28 +490,31 @@ header input:hover {
             box-shadow: inset 0 216px 0 0 darkviolet;
   }
   .content section {
-    width: 500px;
+    width: 100vw;
   }
   .content section .hotel {
-    height: 161.11111px;
+    height: 172px;
   }
   .content section .hotel img {
-    height: 111.11111px;
-    width: 166.66667px;
+    height: 22.22222vw;
+    width: 33.33333vw;
   }
   .content section .hotel .hotelName {
     height: 45px;
-    width: 500px;
+    width: 100vw;
   }
   .content section .hotel .rate {
     height: 45px;
     width: 70px;
   }
   .content section .descrip {
-    width: 420px;
+    width: calc(100vw - 80px);
+  }
+  .content section .descrip table:first-of-type {
+    margin: 0;
   }
   .content section .descrip .end {
-    width: 420px;
+    width: calc(100vw - 80px);
   }
   .content section .descrip .end img {
     height: 10px;
@@ -498,12 +525,12 @@ header input:hover {
   }
   .content section .comment .com {
     height: 170px;
-    width: calc(100% - 80px);
-    max-width: 500px;
+    width: 100%;
+    max-width: 100vw;
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 1024px) {
+@media screen and (min-width: 711px) and (max-width: 1024px) {
   header {
     height: 70px;
     width: 100vw;
